styles/index.css
/* Specific styling for the homepage. */

@keyframes floaty {
    from {bottom: 0;}
    to {bottom: 0.6rem;}
}

/* BASE ELEMENTS */

main {
    flex-flow: row;
    justify-content: center;
    align-items: center;

    height: 100vh;
}

header {
    display: flex;
    flex-flow: column;
    justify-content: flex-end;
    position: relative;

    text-align: center;
    margin: 0;
}
header h1 {
    position: relative;

    margin: 0;
    transition: color 0.5s;
    animation: floaty 1.4s infinite alternate;
}

nav {
    justify-content: center;
    align-items: center;

    padding: 0.625rem 0 0 0;
}
nav a {
    position: relative;
    color: black;

    bottom: 0;
    transition: bottom 0.5s;
}

/* CUSTOM ELEMENTS */

.menu {
    flex-basis: 0;
    padding: 0 2rem;
}
.graphic-box {
    padding: 0 0;
    overflow: hidden;
}
.graphic-track {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}
.graphic {
    flex-shrink: 0;
    position: relative;
    animation: floaty 1.7s infinite alternate;
}

/* MEDIA QUERIES */

@media (hover: hover) {
    header h1:hover {
        color: #5a9296;
    }

    nav a:hover {
        background-color: black;
        color: white;
        bottom: 0.15rem;
    }
}

@media screen {
    header h1 {
        font-size: 7rem;
        line-height: 6rem;
    }

    nav a {
        margin: 0 0.625rem 0.625rem 0.625rem;
    }

    .ground {
        width: 35rem;
    }
    .graphic-box {
        width: 30rem;
    }
    .graphic {
        width: 30rem;
    }
}

@media screen and (max-width:68.75rem) {
    header h1 {
        font-size: 5rem;
        line-height: 4.5rem;
    }

    nav a {
        margin: 0 0.4rem 0.4rem 0.4rem;
        font-size: 1.5rem;
    }

    .ground {
        width: 27rem;
    }
    .graphic-box {
        width: 22rem;
    }
    .graphic {
        width: 22rem;
    }
}

@media screen and (max-width:56rem) {
    header h1 {
        font-size: 4rem;
        line-height: 3.5rem;
    }

    .ground {
        width: 20rem;
    }
    .graphic-box {
        width: 17rem;
    }
    .graphic {
        width: 17rem;
    }
}

@media screen and (max-width:41.25rem) {
    header h1 {
        font-size: 3rem;
        line-height: 2.5rem;
    }

    nav {
        flex-flow: column;
    }
    nav a {
        margin: 0 0.4rem 0.4rem 0.4rem;
        font-size: 1.3rem;
    }

    .ground {
        width: 15rem;
    }
    .graphic-box {
        display: none;
    }
    .graphic {
        display: none;
    }
}

